# libsel4-sys

./: .gitignore  .gitmodules  1  2  3  4  5  6  7  Cargo.toml  README.md  build.rs
libsel4-sys/: CMakeLists.txt  Cargo.toml  README.md  Xargo.toml  build.rs  fel4.toml
libsel4-sys/package/: CMakeLists.txt
libsel4-sys/res/: bindgen_wrapper.h
libsel4-sys/src/: lib.rs
libsel4-sys/test_configs/: fel4.toml
package/: CMakeLists.txt
package-config/: .gitignore  Cargo.toml  README.md
package-config/src/: lib.rs
package-config/test_data/: CMakeCache.txt
sel4-entry/: Cargo.toml  Xargo.toml  build.rs
sel4-entry/src/: lib.rs
src/: lib.rs
static-heap/: Cargo.toml
static-heap/src/: lib.rs
test_configs/: README.md  fel4.toml
