[package]
name = "libsel4-sys"
version = "0.0.1"
publish = false
build = "build.rs"
links = "sel4"

[lib]
name = "sel4_sys"
path = "src/lib.rs"

[dependencies]
rlibc = "1.0"

[build-dependencies]
cmake = "0.1"
bindgen = "0.35"
fel4-config = {git = "ssh://github.com/PolySync/fel4-config.git", branch = "master"}
